--- a/app/views/settings/_backlinks_settings.html.erb
+++ b/app/views/settings/_backlinks_settings.html.erb
@@ -1,7 +1,7 @@
 <table>
   <tbody>
     <tr>
-      <th><p><label for="settings_show_always">Show under every wiki page</label></p></th>
+      <th><p><label for="settings_show_always"><%= l('backlinks_settings_show_always') %></label></p></th>
       <td>
         <input type="checkbox"
           id="settings_show_always"
